--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "private": true,
   "homepage": "https://Voloshyn9900.github.io/goit-react-hw-02-phonebook/",
   "dependencies": {
-        "@testing-library/jest-dom": "^5.16.3",
-        "@testing-library/react": "^12.1.4",
-        "@testing-library/user-event": "^13.5.0",
-        "modern-normalize": "^2.0.0",
-        "react": "^18.1.0",
-        "react-dom": "^18.1.0",
-        "react-scripts": "5.0.1",
-        "styled-components": "^6.1.0",
-        "web-vitals": "^2.1.3"
-      },
+    "@testing-library/jest-dom": "^5.16.3",
+    "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^13.5.0",
+    "formik": "^2.4.5",
+    "modern-normalize": "^2.0.0",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-scripts": "5.0.1",
+    "shortid": "^2.2.16",
+    "styled-components": "^6.1.0",
+    "web-vitals": "^2.1.3",
+    "yup": "^1.3.2"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
